# stock_vis

./: .coveragerc  .env.example  .gitattributes  .gitignore  CLAUDE.md  DECISIONS.md  FMP_API_ENDPOINTS.md  HARNESS_FITNESS.md  PROGRESS.md  TASKQUEUE.md  WORKLOG.md  WORKSPACE_ROOT.md  add_kb_lessons.py  create_sample_data.py  pyproject.toml  pytest.ini  requirements.txt  start_services.sh  stop_services.sh  test.ipynb  test_chain_sight_apis.py  test_fmp_all_endpoints.py  test_preset_sharing.py
.claude/: settings.json
API request/: alphavantage_client.py  alphavantage_processor.py  alphavantage_service.py  api_to_model_processor.py
analysis/: admin.py  models.py  serializers.py  urls.py  views.py
antigravity/: main_mockup_10_arc.html  main_mockup_1_briefing.html  main_mockup_2_widgets.html  main_mockup_3_heatmap.html  main_mockup_4_copilot.html  main_mockup_5_shorts.html  main_mockup_6_terminal.html  main_mockup_7_galaxy.html  main_mockup_8_zen.html  main_mockup_9_portfolio.html  main_mockups_index.html  thesis_control_uiux_analysis.md  ui_mockup_10_timeline_pulse.html  ui_mockup_1_chatbot.html  ui_mockup_2_liquid.html  ui_mockup_3_radar.html  ui_mockup_4_gravity.html  ui_mockup_5_glitch.html  ui_mockup_6_tinder.html  ui_mockup_7_voice_chat.html  ui_mockup_8_zen_ring.html  ui_mockup_9_ar_space.html  ui_mockup_dashboard.html  ui_mockup_empty_state.html  user_journey_flow.html  web_mockup_1_terminal.html  web_mockup_2_saas.html  web_mockup_3_split.html  web_mockup_4_bento.html
api_request/: __init__.py  admin_views.py  alphavantage_client.py  alphavantage_processor.py  eodhd_client.py  rate_limiter.py  sec_edgar_client.py  stock_service.py  urls.py
auto_agent_system/: system_document.md
chainsight/: admin.py  apps.py  utils.py
claude_example/: __init__.py  add_stock_symbols.py  alphavantage_api_settings.py  alphavantage_setup_guide.md  api_views.py  client.py  posgresql_setup.md  processor.py  readme.md  service.py  stocks_urls.py
config/: __init__.py  asgi.py  celery.py  exception_handler.py  serializers.py  settings.py  settings_test.py  spectacular_enums.py  tasks.py  urls.py  views.py
contracts/: README.md  chainsight-api.yaml  sec-pipeline-api.yaml  shared-types.ts  validation-api.yaml
docker/: .dockerignore  Dockerfile  Dockerfile.frontend  docker-compose.prod.yml  docker-compose.yml
docs/: AWS-account-setup-security-guide.md  EMPTY_BASKET_SUMMARY.md  FRONTEND_KEYWORD_SYSTEM_DESIGN.md  KEYWORD_DATA_COLLECTION_ARCHITECTURE.md  KEYWORD_DATA_COLLECTION_USAGE.md  KEYWORD_INFRA_IMPLEMENTATION_SUMMARY.md  MARKET_MOVERS_KEYWORD_DESIGN.md  MONITORING.md  NEWS-QA-REPORT.md  README.md  empty-basket-implementation.md  financial_unit_specification.md  harness_engineering_guide.md  market-movers-django-to-aws-plan.md  monitor_timing_pivot_recon_p0.md  qa_analysis_googl_data_issue.md  top_stock_market_pulse_prompt.md  watchlist_code_review.md
example/: backend.md  entity_extractor_example.py  frontend.md  infra.md  investment-advisor.md  qa-architect.md  rag-llm.md
frontend/: next.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
integrations/: README.md
iron_trading/: urls.py  views.py
(+3856 files in other folders)
